# TickPulse

./: CMakeLists.txt  README.md
examples/: main.cpp
include/market_data/: cme_gold_provider.hpp  market_data_provider.hpp  types.hpp
src/: cme_gold_provider.cpp  dummy_source.hpp
